# crossing_consoles

./: .clang-format  .gitignore  CMakeLists.txt  README.md
doc/doxygen/: CMakeLists.txt  Doxyfile  DoxygenLayout.xml  build.sh  customdoxygen.css
doc/doxygen/markdown/: close_connection.md  connection_establishment.md  connection_states.md  deploying.md  dev.md  developer_guide.md  game.md  game_client_server.md  game_player_controls.md  game_world_generator.md  game_world_rules.md  hosting_documentation.md  mainpage.md  message_structure.md  messages.md  network_model.md  putty.md  ssh.md  uml-game.md  uml_byte.md  uml_connection.md  uml_diagrams.md  uml_messages.md  uml_src.md
src/: CMakeLists.txt  Example.cpp  Example.h  main_client.cpp  main_server.cpp
src/Game/: Wall.h  World.cpp
src/communication/: ClientCommunication.cpp  ClientCommunication.h  ClientConnection.cpp  ClientConnection.h  ICommunication.h  Message.cpp  Message.h  ProtocolDefinition.h  ServerClientConnection.cpp  ServerClientConnection.h  ServerCommunication.cpp  ServerCommunication.h  debug.cpp  debug.h
src/communication/byte_layer/byte_stream/: IInputByteStream.h  IOutputByteStream.h  MockBidirectionalByteStream.cpp  MockBidirectionalByteStream.h  MockInputStream.cpp  MockInputStream.h  SocketByteServer.cpp  SocketByteServer.h  SocketByteStream.cpp  SocketByteStream.h  SocketHolder.cpp  SocketHolder.h  socket_libs.h
src/communication/byte_layer/connection_simulator/: ConnectionSimulatorFlakey.cpp  ConnectionSimulatorFlakey.h  ConnectionSimulatorFlaky.cpp  ConnectionSimulatorFlaky.h  ConnectionSimulatorPerfect.cpp  ConnectionSimulatorPerfect.h  IConnectionSimulator.h  IConnectionSimulatorProvider.h  PerfectConnectionSimulatorProvider.cpp  PerfectConnectionSimulatorProvider.h
src/communication/connection_layer/: ClientSideConnectionManager.cpp  ClientSideConnectionManager.h  Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  ServerSideConnectionManager.cpp  ServerSideConnectionManager.h
src/communication/connection_layer/connection/: ClientSideConnectionManager.cpp  ClientSideConnectionManager.h  Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  ConnectionStatistics.cpp  ConnectionStatistics.h  ServerSideConnectionManager.cpp  ServerSideConnectionManager.h
src/communication/connection_layer/event/: ConnectEvent.cpp  ConnectEvent.h  DisconnectEvent.cpp  DisconnectEvent.h  Event.cpp  Event.h  PayloadEvent.cpp  PayloadEvent.h
src/communication/crc/: CRCHandler.cpp  CRCHandler.h
src/communication/low_level/: ByteServer.cpp  ByteServer.h  ByteStream.cpp  ByteStream.h  ConnectionSimulatorFlakey.cpp  ConnectionSimulatorFlakey.h  ConnectionSimulatorPerfect.h  IConnectionSimulator.h  IInputStream.h  IOutputStream.h  MockBidirectionalByteStream.cpp  MockBidirectionalByteStream.h  MockInputStream.h  Socket.cpp  Socket.h  SocketHolder.h  socket_libs.h
src/communication/message_layer/: MessageInputStream.cpp  MessageInputStream.h  MessageOutputStream.cpp  MessageOutputStream.h
src/communication/message_layer/crc/: CRCHandler.cpp  CRCHandler.h
src/communication/message_layer/message/: AcknowledgeMessage.cpp  AcknowledgeMessage.h  (+18 more)
src/communication/messages/: ConnectionRequestMessage.cpp  ConnectionRequestMessage.h  ConnectionResponseMessage.cpp  ConnectionResponseMessage.h  GameCommandMessage.cpp  GameCommandMessage.h  GameMessage.cpp  GameMessage.h  KeepAliveMessage.cpp  KeepAliveMessage.h  Message.cpp  Message.h  MessageCoder.cpp  MessageCoder.h  MessageMetaData.cpp  MessageMetaData.h  PayloadMessage.cpp  PayloadMessage.h  RequestMessage.cpp  RequestMessage.h  ResponseMessage.cpp  ResponseMessage.h  StatusMessage.cpp  StatusMessage.h
src/game/: Compositor.cpp  Compositor.h  GameClient.cpp  GameClient.h  GameDefinition.h  GameLogic.cpp  GameLogic.h  GameServer.cpp  GameServer.h  Player.cpp  Player.h  Position.cpp  Position.h  Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h  Terminal.cpp  Terminal.h  Wall.cpp  Wall.h  World.cpp  World.h  WorldGenerator.cpp  WorldGenerator.h  symbols.h
src/game/common/: Color.cpp  Color.h  Position.cpp  Position.h
src/game/networking/: Change.cpp  Change.h  ISerializable.h  SerializationUtils.cpp  SerializationUtils.h
src/game/terminal/: ITerminal.h  MockTerminal.cpp  MockTerminal.h  RealTerminal.cpp  RealTerminal.h  colors.h
src/game/visual/: ColoredChar.cpp  ColoredChar.h  ColoredCharMatrix.cpp  ColoredCharMatrix.h  ColoredString.cpp  ColoredString.h  ColoredStringMatrix.cpp  ColoredStringMatrix.h  Compositor.cpp  Compositor.h  HealthDisplay.cpp  HealthDisplay.h  PlayerList.cpp  PlayerList.h  RenderedWorld.cpp  RenderedWorld.h  Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h  SpriteGenerator.cpp  SpriteGenerator.h  SpriteMap.cpp  SpriteMap.h  StatisticsTable.cpp  StatisticsTable.h  Table.cpp  Table.h  symbols.h
src/game/world/: ColoredField.cpp  ColoredField.h  EmptyWorldGenerator.cpp  EmptyWorldGenerator.h  HeightMap.cpp  HeightMap.h  IWorldGenerator.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  RandomWorldGenerator.cpp  RandomWorldGenerator.h  Spawner.cpp  Spawner.h  Wall.cpp  Wall.h  World.cpp  World.h  WorldGenerator.cpp  WorldGenerator.h  block_types.h
tests/: CMakeLists.txt  byte_steam.cpp  byte_stream.cpp  colored_char_matrix.cpp  colored_fields.cpp  colored_string_matrix.cpp  connection.cpp  connection_manager.cpp  connection_simulator.cpp  crc_handler.cpp  example.cpp  flaky_connection.cpp  game.cpp  game_logic.cpp  game_networking.cpp  game_player_list.cpp  game_projectile.cpp  game_serialization.cpp  height_map.cpp  item.cpp  item_generator.cpp  message_coder.cpp  message_stream.cpp  mocks.cpp  player.cpp  position.cpp  rendered_world.cpp  renderer.cpp  spawner.cpp  sprite.cpp  sprite_map.cpp  statistics.cpp  wall.cpp  world.cpp
tests/fixtures/: ConnectionManagers.h  Connections.h  FlakyConnectionManagers.h  GamePlay.cpp  GamePlay.h  GamePlayerList.h  Items.h  Statistics.h
tests/utils/: TestGameDefinition.h  TimingHelper.cpp  TimingHelper.h  detect_debugger.cpp  detect_debugger.h
(+55 files in other folders)
